--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,65 @@
-# gradle
+########################
+# Compiled class files #
+########################
+
+*.class
+
+#############
+# Log files #
+#############
+
+*.log
+
+###############
+# BlueJ files #
+###############
+
+*.ctxt
+
+################################
+# Mobile Tools for Java (J2ME) #
+################################
+
+.mtj.tmp/
+
+#################
+# Package files #
+#################
+
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+##############################
+# Virtual machine crash logs #
+##############################
+
+hs_err_pid*
+
+##########
+# Gradle #
+##########
 
 .gradle/
 build/
 out/
 classes/
 
-# eclipse
-
-*.launch
-
-# idea
+########
+# IDEA #
+########
 
 .idea/
 *.iml
 *.ipr
 *.iws
 
-# vscode
+###########
+# VS Code #
+###########
 
 .settings/
 .vscode/
@@ -24,6 +67,25 @@ bin/
 .classpath
 .project
 
-# fabric
+###########
+# Eclipse #
+###########
+
+*.launch
+
+##########
+# Fabric #
+##########
 
 run/
+
+######################
+# OS generated files #
+######################
+
+.DS_Store
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
