--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,10 @@ dependencies {
 	// Fabric API. This is technically optional, but you probably want it anyway.
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
+	modImplementation "io.github.prospector:modmenu:${project.modmenu_version}"
+
+	modImplementation "me.shedaniel:RoughlyEnoughItems:${project.rei_version}"
+
 	// PSA: Some older mods, compiled on Loom 0.2.1, might have outdated Maven POMs.
 	// You may need to force-disable transitiveness on them.
 }
