--- a/gradle.properties
+++ b/gradle.properties
@@ -10,4 +10,11 @@ minecraft_version=1.16.2
 yarn_mappings=1.16.2+build.26
 loader_version=0.9.2+build.206
 
+# Dependencies
+
 fabric_version=0.19.0+build.398-1.16
+
+# Dev Dependencies
+
+modmenu_version=1.14.6+build.31
+rei_version=5.2.7
